# lustre-test-vms

./: .gitignore  CLAUDE.md  Makefile  README.md  SUGGESTED-AGENTS.md  TODO.md  ltvm  manifest  pyproject.toml  setup.sh
.beads/: issues.jsonl  metadata.json
.githooks/: pre-commit
docs/: GETTING_STARTED.md  RELEASING.md  SOFTROCE_SETUP.md  SYSTEM_TEST_PLAN.md  test-nested-passthrough-e2e.sh  test-nested-sriov.sh
lib/: commands.py  config.py  image.py  kernel-build-inner-deb.sh  kernel-build-inner.sh  kernel.py  lustre.py  package.py  platform.py  runtime.py  setup.py  validate.py  vmctl.py
ltvm_pkg/: cli.py  cross_compile.py  deploy-lustre.sh  host_setup.py  image_build.py  image_export.py  kernel_build.py  ltvm-completion.bash  lustre_build.py  lustre_compat.py  mofed-kmod-build-inner.sh  mofed_kmod_build.py  paths.py  podman_run.py  qemu_run.py  release_package.py  target_config.py  vfio.py  vm_cluster.py  vm_commands.py  vm_net.py  vm_state.py
qemu/: cli.py  cluster.py  commands.py  deploy-lustre.sh  dk-filter  models.py  net.py  process.py  vm.sh
targets/: targets.yaml
tests/: conftest.py  test_arch_propagation.py  test_build_commands.py  test_cluster_cli.py  test_config.py  test_cross_compile.py  test_deploy.py  test_fetch_publish.py  test_gaps.py  test_image.py  test_image_export.py  test_kernel.py  test_ltvm_cli.py  test_lustre.py  test_lustre_compat.py  test_lustre_compat_real.py  test_models.py  test_package.py  test_parser_coverage.py  test_podman_preflight.py  test_podman_run.py  test_qemu_run.py  test_round19_parsers.py  test_runtime.py  (+13 more)
(+43 files in other folders)
